# AutoCode

./: CHANGELOG.md  LICENSE  README.md  latest.json  package-lock.json  package.json
scripts/: generate-update-json.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: gen_candidates.swift  gen_icon.swift  icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  config.rs  extractor.rs  lib.rs  main.rs  paste.rs  permissions.rs
src-tauri/src/monitor/: apple_mail.rs  imessage.rs  mod.rs  outlook.rs
