[package]
name = "autocode"
version = "0.3.1"
description = "AutoCode - Smart 2FA verification code extractor for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "autocode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rusqlite = { version = "0.33", features = ["bundled"] }
notify = "8"
regex = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "6"
enigo = "0.3"
anyhow = "1"
thiserror = "2"
